--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ddd",
+  "name": "clean-architecture",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -11,13 +11,14 @@
     "@types/uuid": "^8.3.4",
     "jest": "^29.0.3",
     "sqlite3": "^5.1.1",
-    "ts-jest": "^29.0.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "tslint": "^6.1.3",
     "typescript": "^4.8.3"
   },
   "scripts": {
-    "test": "set NODE_ENV=test && node_modules/.bin/tsc --noEmit && jest"
+    "test": "set NODE_ENV=test&&node_modules/.bin/tsc --noEmit && jest --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "reflect-metadata": "^0.1.13",
