--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.23.2",
     "sequelize-typescript": "^2.1.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   }
 }
